[gd_scene load_steps=3 format=3 uid="uid://c23dphnh15yff"]

[ext_resource type="Texture2D" uid="uid://c5t4tn3k3n40e" path="res://assets/tools/cross/cross.png" id="1_j5ssm"]
[ext_resource type="Script" path="res://assets/tools/cross/cross.gd" id="2_65gc5"]

[node name="cross" type="TextureButton"]
z_index = 10
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_j5ssm")
script = ExtResource("2_65gc5")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -37.0
offset_top = 51.0
offset_right = 70.0
offset_bottom = 90.0
text = "cross
uses: 1"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
